# routes/authors.js
@@ -6,9 +6,9 @@ const authorsController = require('../controllers/authors');
 const validation = require('../middleware/validate');
 
 router.get('/', authorsController.getAllAuthors);
-// router.get('/:id', authorsController.getSingleAuthor);
-// router.post('/', validation.saveAuthor, authorsController.createNewAuthor);
-// router.put('/:id', validation.saveAuthor, authorsController.updateAuthor);
-// router.delete('/:id', authorsController.deleteAuthor);
+router.get('/:id', authorsController.getSingleAuthor);
+router.post('/', validation.saveAuthor, authorsController.createNewAuthor);
+router.put('/:id', validation.saveAuthor, authorsController.updateAuthor);
+router.delete('/:id', authorsController.deleteAuthor);
 
 module.exports = router;
